samples/_failures_safe/1761263934_f44fa9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e3c93d3.c: In function ‘multiply_matrices’:
./samples/SAFE/__tmp_0e3c93d3.c:114:17: error: expected expression at end of input
  114 |                 long long product = (long long)a->data[i][k] * (
      |                 ^~~~
./samples/SAFE/__tmp_0e3c93d3.c:114:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e3c93d3.c:114:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e3c93d3.c:114:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e3c93d3.c:114:17: error: expected declaration or statement at end of input
